--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,18 @@
 		<finalName>my-webapp</finalName>
 		
 		<plugins>
+		
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<url>http://localhost:8080/manager/text</url>
+					<server>TomcatServer</server>
+					<path>/my-webapp</path>
+				</configuration>
+			</plugin>
+			
 			<plugin>
 				<groupId>com.github.ekryd.echo-maven-plugin</groupId>
 				<artifactId>echo-maven-plugin</artifactId>
