bitbucket pipeline poc to deploy file central nexuswq!

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,4 +9,5 @@ pipelines:
   default:
     - step:
         script: # Modify the commands below to build your repository.
-          - mvn clean install
+#          - mvn clean install
+	   - mvn -V -B -s settings.xml deploy
