--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 		<repository>
 			<id>ossrh</id>
                         <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		<repository>
+		</repository>
 		<snapshotRepository>
 	        	<id>ossrh</id>
 	  		<url>https://oss.sonatype.org/content/repositories/snapshots</url>
