--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,12 +6,18 @@
 image: maven:3.3.3
 
 pipelines:
-  default:
-    - step:
-        script: # Modify the commands below to build your repository.
+#  default:
+#    - step:
+#        script: # Modify the commands below to build your repository.
 #          - mvn clean install
-           - mvn -V -B -s settings.xml deploy
+#           - mvn -V -B -s settings.xml deploy
   custom:
     - step:
         script: # testing manual triggers
            - mvn -B clean release:prepare release:perform
+  branches:
+    - step:
+        script: # Modify the commands below to build your repository.
+           - mvn clean install
+           - mvn -V -B -s settings.xml deploy
+
