bitbucket pipeline updated to added manual trigger for release builds

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,30 +9,16 @@ pipelines:
 #  default:
 #    - step:
 #        script: # Modify the commands below to build your repository.
-#          - mvn clean install
-#           - mvn -V -B -s settings.xml deploy
-#  custom:
-#    - step:
-#        script: # testing manual triggers
-#           - mvn -B clean release:prepare release:perform
-#  branches:
-#    - step:
-#        script: # Modify the commands below to build your repository.
 #           - mvn clean install
 #           - mvn -V -B -s settings.xml deploy
-
-pipelines:
-  custom: # Pipelines that are triggered manually
-    sonar:
-      - step:
-          script:
-            - echo "Manual triggers for Sonar are awesome!"
-    deployment-to-prod:
-      - step:
-          script:
-            - echo "Manual triggers for deployments are awesome!"
-  branches:  # Pipelines that run automatically on a commit to a branch
-    staging:
-      - step:
-          script:
-            - echo "Automated pipelines are cool too."
+  custom:
+    release:
+    - step:
+        script: # testing manual triggers
+           - mvn -B clean release:prepare release:perform
+  branches:
+    snapshot:
+    - step:
+        script: # Modify the commands below to build your repository.
+           - mvn clean install
+           - mvn -V -B -s settings.xml deploy
