--- a/pom.xml
+++ b/pom.xml
@@ -244,6 +244,11 @@
 					</reportSet>
 				</reportSets>
 			</plugin>
+			<plugin>
+			        <groupId>org.apache.maven.plugins</groupId>
+			        <artifactId>maven-release-plugin</artifactId>
+			        <version>2.5.3</version>
+			</plugin>
 		</plugins>
 	</reporting>
 	
