--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
 			</plugin>
 			
 			<plugin>
+			        <groupId>org.apache.maven.plugins</groupId>
+			        <artifactId>maven-release-plugin</artifactId>
+			        <version>2.5.3</version>
+			</plugin>
+			
+			<plugin>
 				<groupId>com.github.ekryd.echo-maven-plugin</groupId>
 				<artifactId>echo-maven-plugin</artifactId>
 				<version>1.2.0</version>
@@ -244,11 +250,11 @@
 					</reportSet>
 				</reportSets>
 			</plugin>
-			<plugin>
+			<!--<plugin>
 			        <groupId>org.apache.maven.plugins</groupId>
 			        <artifactId>maven-release-plugin</artifactId>
 			        <version>2.5.3</version>
-			</plugin>
+			</plugin>-->
 		</plugins>
 	</reporting>
 	
