--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.thinknyx</groupId>
 	<artifactId>my-webapp</artifactId>
 	<packaging>war</packaging>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 	<name>my-webapp Maven Webapp</name>
 	<url>http://maven.apache.org</url>
   
@@ -48,7 +48,7 @@
 	<scm>
 		<connection>scm:git:https://kulbhushan_mayer@bitbucket.org/thinknyx/maven_web_application.git</connection>
 		<developerConnection>scm:git:https://kulbhushan_mayer@bitbucket.org/thinknyx/maven_web_application.git</developerConnection>
-		<tag>my-webapp-1.0</tag>	
+		<tag>HEAD</tag>	
 	</scm>
 	
 	<issueManagement>
