--- a/pom.xml
+++ b/pom.xml
@@ -105,11 +105,11 @@
 				</configuration>
 			</plugin>
 			
-			<plugin>
+			<!--<plugin>
 			        <groupId>org.apache.maven.plugins</groupId>
 			        <artifactId>maven-release-plugin</artifactId>
 			        <version>2.5.3</version>
-			</plugin>
+			</plugin>-->
 			
 			<plugin>
 				<groupId>com.github.ekryd.echo-maven-plugin</groupId>
@@ -141,7 +141,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.4</version>
+				<version>2.5.3</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.maven.scm</groupId>
