--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 	<scm>
 		<connection>scm:git:https://kulbhushan_mayer@bitbucket.org/thinknyx/maven_web_application.git</connection>
 		<developerConnection>scm:git:https://kulbhushan_mayer@bitbucket.org/thinknyx/maven_web_application.git</developerConnection>
+		<url>https://bitbucket.org/thinknyx/maven_web_application</url>
 		<tag>HEAD</tag>	
 	</scm>
 	
