--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.thinknyx</groupId>
 	<artifactId>my-webapp</artifactId>
 	<packaging>war</packaging>
-	<version>1.1</version>
+	<version>1.2-SNAPSHOT</version>
 	<name>my-webapp Maven Webapp</name>
 	<url>http://maven.apache.org</url>
   
@@ -49,7 +49,7 @@
 		<connection>scm:git:https://kulbhushan_mayer@bitbucket.org/thinknyx/maven_web_application.git</connection>
 		<developerConnection>scm:git:[fetch=]https://bitbucket.org/thinknyx/maven_web_application[push=]https://kulbhushan_mayer@bitbucket.org/thinknyx/maven_web_application.git</developerConnection>
 		<url>https://bitbucket.org/thinknyx/maven_web_application</url>
-		<tag>my-webapp-1.1</tag>	
+		<tag>HEAD</tag>	
 	</scm>
 	
 	<issueManagement>
