--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,8 @@
 		<repository>
 			<id>releases</id>
 			<name>Internal Releases</name>
-			<url>http://localhost:8081/nexus/content/repositories/releases/</url>
+			<!--<url>http://localhost:8081/nexus/content/repositories/releases/</url>-->
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
 		<snapshotRepository>
 			<id>snapshots</id>
