--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,7 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
-					<url>http://localhost:8080/manager/text</url>
+					<url>http://84.39.48.145:8080/manager/text</url>
 					<server>TomcatServer</server>
 					<path>/my-webapp</path>
 				</configuration>
