--- a/pom.xml
+++ b/pom.xml
@@ -239,18 +239,18 @@
 				  	</execution>
 			        </executions>
 		    </plugin>-->
-			<plugin>
+			<!--<plugin>
 			        <groupId>org.sonatype.plugins</groupId>
 			        <artifactId>nexus-staging-maven-plugin</artifactId>
 			        <version>1.6.7</version>
 			        <extensions>true</extensions>
 			        <configuration>
 			        	<serverId>ossrh</serverId>
-				        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+				        <nexusUrl>https://oss.sonatype.org/</nexusUrl>-->
 					<!-- Set this to true and the release will automatically proceed and sync to Central Repository will follow  -->
-				        <autoReleaseAfterClose>true</autoReleaseAfterClose>
+				        <!--<autoReleaseAfterClose>true</autoReleaseAfterClose>
         			</configuration>
-      			</plugin>
+      			</plugin>-->
 		</plugins>
 	</build>
 	
