--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	</licenses>
   	<developers>
     		<developer>
-      			<name>Kulbhushan Mayer</name>
+      			<name>Kulbhushan Maharaj</name>
 		        <email>kulbhushan.mayer@thinknyx.com</email>
 			<organization>thinkyx technologies llp</organization>
 		        <organizationUrl>http://www.simpligility.com</organizationUrl>
