--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   	<developers>
     		<developer>
       			<name>Vikrant Maharaj</name>
-		        <email>kulbhushan.mayer@thinknyx.com</email>
+		        <email>vikrant.maharaj@thinknyx.com</email>
 			<organization>thinkyx technologies llp</organization>
 		        <organizationUrl>http://www.simpligility.com</organizationUrl>
 		</developer>
